--- a/next-app/package.json
+++ b/next-app/package.json
@@ -20,8 +20,11 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "classnames": "^2.4.0",
+    "framer-motion": "^10.16.16",
+    "react-icons": "^4.12.0",
+    "tailwindcss": "^3.4.0"
   }
 }
