--- a/next-app/.vscode/tasks.json
+++ b/next-app/.vscode/tasks.json
@@ -24,6 +24,30 @@
                 "panel": "new"
             }
         },
+        {
+            "label": "yarn dev",
+            "type": "shell",
+            "command": "yarn dev",
+            "isBackground": true,
+            "problemMatcher": {
+                "owner": "javascript",
+                "pattern": {
+                    "regexp": "^.+$",
+                    "file": 1,
+                    "location": 2,
+                    "message": 3
+                },
+                "background": {
+                    "activeOnStart": true,
+                    "beginsPattern": "^.*Starting development server.*$",
+                    "endsPattern": "^.*Compiled successfully.*$"
+                }
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            }
+        },
 		{
             "label": "yarn build and start",
             "dependsOn": ["yarn build", "yarn start"],
