--- a/next-api/Properties/launchSettings.json
+++ b/next-api/Properties/launchSettings.json
@@ -9,6 +9,15 @@
     }
   },
   "profiles": {
+    "NextApi": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:44348/WeatherForecast",
+      "applicationUrl": "https://localhost:44348;http://localhost:5252",
+      "environmentVariables": {
+          "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+  },
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
