feat: Add button to save fetched data to MongoDB and create corresponding API endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ stats.json
 .DS_Store
 npm-debug.log
 .idea
+.suo
 
 # Ignored directories
 next-api/bin/
 next-api/obj/
+next-api/.vs/next-api/FileContentIndex/*.vsidx
